if_oce: fix epoch handling

Thanks to gallatin@ for suggesting the patch.

PR:			260330
Reported by:		Vincent Milum Jr.
Reviewed by:		gallatin, glebius
Tested by:		Vincent Milum Jr.
Differential Revision:	https://reviews.freebsd.org/D33395

(cherry picked from commit e363f832cfb283a543fa8e47ebd9e51817994fde)